# cross-plateform-cmake-setup

./: CMakeLists.txt  readme.md
ext/: CMakeLists.txt
src/: main.cpp
